modified tests